terminal vh fix + fix comments wrapping

--- a/css/error.css
+++ b/css/error.css
@@ -6,6 +6,7 @@ body {
 }
 #term {
     height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     overflow: auto;
     font-weight: bold;
 }
