--- a/css/style.css
+++ b/css/style.css
@@ -398,6 +398,7 @@ section .wrapper pre {
     padding: 0;
     margin: 0;
     color: #fff;
+    word-break: break-all;
 }
 #user_comments .comment {
     clear: both;
